# imgsketch

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  imgsketch.c
include/: arguments.h  bar.h  color.h  imagedata.h  imgplane.h  jpegfile.h  pixmap.h  pngfile.h  pnggrid.h  presets.h  sketcher.h  skimg.h  skutil.h
lib/: bar.c  bar.h
markdown/: circle.webm
src/: arguments.c  bar.c  color.c  imagedata.c  imgsketch.c  jpegfile.c  pixmap.c  pngfile.c  presets.c  sketcher.c  skimg.c  skutil.c
tests/: CMakeLists.txt  README.md  drawcircle.c  drawsquare.c  randtest.c  slope1.c  undefslope.c
